--- a/static/styles.css
+++ b/static/styles.css
@@ -29,7 +29,7 @@ h2{
 .register
 {
     
-        background-color: #7E8F96;
+        background-color: #00237d;
         width: 500px;
         margin: 0px 0px 0px 450px;
         color: white;
