--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>IPL Score Predictor</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='ipl-favicon.ico') }}">
+        
     <script src="https://kit.fontawesome.com/f13b0bc903.js" crossorigin="anonymous"></script>
     </head>
   <body>
@@ -57,10 +59,9 @@
           <input class="form-input" type="text" name="runs_in_prev_5" placeholder="Eg. 42"><br><br>
           <label> Wickets taken in previous 5 Overs: </label><br>
           <input class="form-input" type="text" name="wickets_in_prev_5" placeholder="Eg. 3"><br><br>
-
-          
-          <input type="submit" value="Predict Score" id ="sub">
-      </form>
+            
+          <input type="submit" class="myButton" value="Predict Score">
+                </form>
       </div>
       
       </body>
