--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
 }
+
 h1{
     text-align: center;
     padding: 20px;
@@ -29,7 +30,7 @@ h2{
 .register
 {
     
-        background-color: #00237d;
+        background-color:  #00237d;
         width: 500px;
         margin: 0px 0px 0px 450px;
         color: white;
@@ -77,3 +78,29 @@ label{
     border-radius: 3px;
     outline: 0;
 }
+.myButton {
+	box-shadow:inset 0px 1px 0px 0px #fbafe3;
+	background:linear-gradient(to bottom, #ff5bb0 5%, #ef027d 100%);
+	background-color:#ff5bb0;
+	border-radius:6px;
+	border:1px solid #ee1eb5;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #c70067;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #ef027d 5%, #ff5bb0 100%);
+	background-color:#ef027d;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
+        
