--- a/static/styles.css
+++ b/static/styles.css
@@ -103,4 +103,81 @@ label{
 	top:1px;
 }
 
-        
+/*animations*/
+carousel {
+  max-width: 100%;
+  height: 250px;
+  max-height: 250px;
+  margin-bottom: 20px;
+  position: relative;
+  overflow: hidden;
+  display: block;
+  
+}
+carousel img {
+  max-width: 100%;
+  width: 600px;
+  height: auto;
+  max-height: 250px;
+  position: absolute;
+  animation: slide 40s infinite;
+  
+  
+}
+carousel img:nth-child(2) {
+margin-left: 50%;
+}
+carousel img:nth-child(3) {
+margin-left: 100%;
+}
+carousel img:nth-child(4) {
+margin-left: 150%;
+}
+carousel img:nth-child(5) {
+margin-left: 200%;
+}
+carousel img:nth-child(6) {
+margin-left: 250%;
+}
+carousel img:nth-child(7) {
+margin-left: 300%;
+}
+carousel img:nth-child(8) {
+margin-left: 350%;
+}
+
+/*
+@keyframes slide {
+  0% {
+    left: 0;
+  }
+  20% {
+    left: -100%;
+  }
+   40% {
+    left: -200%;
+  }
+  60% {
+    left: -300%;
+  }
+  80% {
+    left: -200%;
+  }
+  100% {
+    left: -100%;
+  }
+
+}
+*/
+
+@keyframes slide {
+  0% {
+    left: 0;
+  }
+  50% {
+    left: -300%;
+  }
+  100% {
+    left: 0;
+  }
+}
