--- a/templates/result.html
+++ b/templates/result.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <h1>IPL Batting Score Predictor 🏆</h1> 
+        <h1>  IPL Batting Score Predictor 🏆</h1> 
 
 			<!-- Result -->
 			<div class="register" >
@@ -23,8 +23,21 @@
                     <p style="font-size:20px;">Made by Atharva Patil.</p><br>
                 
                 <a href="https://github.com/Atharva1604"><i class="fab fa-github fa-lg contact-icon"></i></a>&nbsp;&nbsp;
-               <a href="https://www.linkedin.com/in/atharva-patil-a79a84176/"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
+               <a href="https://www.linkedin.com/in/atharva-patil-a79a84176/"><i class="fab fa-linkedin fa-lg contact-icon"></i></a><br><br>
            </center>
-
-            </body>
+     <center>
+    <carousel>
+  <img src="{{ url_for('static', filename= 'mi1.jpg') }}">
+  <img src="{{ url_for('static', filename= 'srh1.png') }}">
+  <img src="{{ url_for('static', filename= 'rcb1.png') }}">
+  <img src="{{ url_for('static', filename= 'dc1.png') }}">
+  <img src="{{ url_for('static', filename= 'rr1.png') }}">
+  <img src="{{ url_for('static', filename= 'kkr1.jpg') }}">
+  <img src="{{ url_for('static', filename= 'kxip1.png') }}">
+  <img src="{{ url_for('static', filename= 'csk1.png') }}">
+</carousel>
+        
+    </center>
+    
+    </body>
 </html>
