Updated the frontend for better interface

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>IPL Score Predictor</title>
+  <body style="background-color:#1c87c9;">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='ipl-favicon.ico') }}">
         
